# fints_frappe

./: .gitignore  README.md  attributions.md  pyproject.toml
fints_frappe/: hooks.py  modules.txt
fints_frappe/fints_frappe/custom/: bank_transaction.json
fints_frappe/fints_frappe/doctype/fints_settings/: fints_settings.js  fints_settings.json  fints_settings.py  test_fints_settings.py
fints_frappe/fints_frappe/doctype/fints_statement_import/: fints_helpers.py  fints_statement_import.js  fints_statement_import.json  fints_statement_import.py  test_fints_statement_import.py
fints_frappe/fints_frappe/doctype/fints_statement_sync_item/: fints_statement_sync_item.json  fints_statement_sync_item.py
fints_frappe/fints_frappe/workspace/fints/: fints.json
