[project]
name = "fints_frappe"
authors = [
    { name = "Ahmad Hussnain", email = "ahmadhussnain787@gmail.com"}
]
description = "FinTS Connector (Germany) for Frappe/ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "fints==4.2.3"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
